# hsfuck

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  hsfuck.cabal
.github/workflows/: haskell.yml  tests.yml
app/: Generator.hs  Lang.hs  Main.hs  Optimizer.hs  Parser.hs  Tests.hs
blog/: Generator.md  README.md
lib/: GenC.hs  GenMIPS.hs  Generator.hs  Lang.hs  Optimizer.hs  Parser.hs
tests/: Test.hs
