cabal-version:      2.4
name:               hsfuck
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license:            MIT
author:             Gonçalo Teixeira
maintainer:         gspteixeira@gmail.com

extra-source-files: CHANGELOG.md

library hsfuck-lib
    exposed-modules:  Generator
                   ,  Lang
                   ,  Optimizer
                   ,  Parser
    hs-source-dirs:   lib
    other-extensions: PatternSynonyms
    build-depends:    base ^>=4.13
                 ,    parsec
    default-language: Haskell2010

executable hsfuck
    main-is:          Main.hs
    build-depends:    base ^>=4.13
                 ,    parsec
                 ,    hsfuck-lib
    other-modules:    Generator
                 ,    Lang
                 ,    Optimizer
                 ,    Parser
    hs-source-dirs:   app
                  ,   lib
    default-language: Haskell2010

test-suite tests
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    build-depends:    base ^>=4.13
                 ,    parsec
                 ,    hsfuck-lib
    hs-source-dirs:   tests
                  ,   lib
    other-modules:    Generator
                 ,    Lang
                 ,    Optimizer
                 ,    Parser
    default-language: Haskell2010

